--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-    <h1 class="mx-auto" style="width: 20%">Game Setup</h1>
+    <h1 class="mt-5 mx-auto text-bright text-center">Game Setup</h1>
 
     <div class="card base-gradient-style mx-auto" style="width: 60%">
         <div class="card-body">
