--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -5,39 +5,36 @@
 
 <body>
 
-<div class="game-container">
-    <div class="game-board">
-        <div th:each="row : ${gameBoard.gameBoardRows}">
+<div class="mt-4 game-container row">
+    <div class="col-7">
+        <div class="game-board-row" th:each="row : ${gameBoard.gameBoardRows}">
             <div th:each="cell : ${row}" th:attr="data-x=${cell.coordinates.y}, data-y=${cell.coordinates.x}"
                  class="bo cell"></div>
         </div>
     </div>
 
-</div>
-<div class="d-flex">
-    <div class="w-25 d-flex flex-column align-items-center">
-        <h3 id="test">Timer</h3>
-        <h2></h2>
-        <div id="timer"></div>
-    </div>
+    <div class="col-5">
+        <div class="w-100 d-flex flex-column align-items-center">
+            <h3 id="test" class="text-bright">Timer</h3>
+            <h2></h2>
+            <div id="timer" class="text-bright"></div>
 
-    <div class="w-75">
-        <div class="d-flex">
-            <div class="w-50">
+            <div class="mt-4">
                 <div class="d-flex flex-column align-items-center">
-                    <h3>Score</h3>
-                    <div class="score-container text-center">
-                        <span id="game-score">0</span>
+                    <h3 class="text-bright">Score</h3>
+                    <div class="w-100 score-container text-center">
+                        <span id="game-score" class="text-bright">0</span>
                     </div>
                 </div>
             </div>
-            <div class="w-50 d-flex flex-column align-items-center">
-                <h4 class="text-center">Game Log</h4>
+
+            <div class="mt-4 d-flex flex-column align-items-center">
+                <h4 class="text-center text-bright">Game Log</h4>
                 <div class="game-log">
                     <ul class="list-group" id="messages">
                     </ul>
                 </div>
-                <div>
+                <div class="mt-2">
                     <a th:href="@{/leaderboards}" class="btn btn-primary">View Leaderboards</a>
                 </div>
             </div>
@@ -64,14 +61,14 @@
 
                     <div class="row align-items-center justify-content-center">
                         <div class="d-flex flex-column align-items-center justify-content-center">
-                            <div class="w-50 text-center" id="endGameModalBodySaveScorePrompt">
+                            <div class="text-center" id="endGameModalBodySaveScorePrompt">
                             </div>
-                            <div class="w-50">
+                            <div class="mt-4">
                                 <input type="text" class="form-control" placeholder="Enter Username"
                                        aria-label="Username"
                                        id="postUsername">
                             </div>
-                            <div class="mt-3">
+                            <div class="mt-4">
                                 <button id="postScore" type="button" class="btn btn-success">Save Score!</button>
                             </div>
                             <div id="errorScore"
@@ -87,7 +84,6 @@
             </div>
             <div class="end-game modal-footer">
                 <a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
-                <a th:href="@{/leaderboards}" type="button" class="btn btn-secondary">Leaderboards</a>
                 <button onClick="window.location.reload();" type="button" class="btn btn-primary">Play
                     Again!
                 </button>
