--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -84,7 +84,7 @@
             </div>
             <div class="end-game modal-footer">
                 <a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
-                <button onClick="window.location.reload();" type="button" class="btn btn-primary">Play
+                <button id="restartGame" type="button" class="btn btn-primary">Play
                     Again!
                 </button>
             </div>
