--- a/src/main/resources/templates/leaderboards.html
+++ b/src/main/resources/templates/leaderboards.html
@@ -5,7 +5,7 @@
 
 <body>
 <div class="container pt-5">
-    <h1 class="text-center">LEADERBOARDS</h1>
+    <h1 class="text-center text-bright">LEADERBOARDS</h1>
 
     <table class="table">
         <thead>
