--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,12 +14,12 @@
     </div>
     <div class="row  justify-content-center">
         <div class="col-6  text-center  base-gradient-style">
-            <a class="btn" th:href="@{/game}">Start Game</a>
+            <a class="btn text-bright" th:href="@{/game}">Start Game</a>
         </div>
     </div>
     <div class="row  justify-content-center">
         <div class="col-6  text-center  base-gradient-style">
-            <a class="btn" th:href="@{/setup}">Game Setup</a>
+            <a class="btn text-bright" th:href="@{/setup}">Game Setup</a>
         </div>
     </div>
 
