--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="mt-5  py-5 row justify-content-center base-gradient-style">
         <div class=" col-6 text-center">
-            <h1>Chase Game</h1>
+            <h1>Escape the Chase</h1>
         </div>
     </div>
     <div class="row  justify-content-center">
